--- a/Proyecto/CSS/estilo.css
+++ b/Proyecto/CSS/estilo.css
@@ -11,9 +11,13 @@ header{
     height: 100%;
     background-color: aliceblue;
     margin: 1px;
-    border: 5px solid black;
+    /*border: 5px solid black;*/
+    border-width: 5px;
+    border-style: dotted;
+    border-color: black;
     border-radius: 50px 50px;
-    
+    position: relative;
+    visibility: visible;
     
 }
 footer{
@@ -22,6 +26,7 @@ footer{
     height: 50px;
     background-color: aliceblue;
     border-radius: 50px 50px;
+    position: relative;
     
 }
 /*
@@ -88,12 +93,14 @@ legend{
     border: 1px solid black;
     border-radius: 5px 5px;
 }
-nav{
+.nav{
     float: left;
     margin-left: 2%;
     /*
     margin:0px;
     */
+    margin:10px 5px 50px 80px;
+    /*margin-top:100px;*/
     height: 400px;
     padding: 0px;
     width: 15%;  
@@ -104,7 +111,7 @@ nav{
 main{
     float: right;
     width: 75%;
-}
+}/*
 ul{
     list-style-type: none;
     margin: 0px;
@@ -129,6 +136,7 @@ li a:hover{
     display: block;
     height: 25px;
 }
+*/
 .textoMenu{
     color:blueviolet;
     font-weight: bold;
@@ -139,6 +147,7 @@ li a:hover{
     padding: 2px;
 
 }
+/*
 .active {
     background-color: #4CAF50;
     color: white;
@@ -148,11 +157,12 @@ li a:hover:not(.active) {
     background-color: #555;
     color: white;
 }
-table{
+*/
+table,th,td,tr{
     border: 1px solid black;
 }
 th{
-    border: 1px solid black;
+    
     background-color: #555;
     color:white;
     font-weight: bold;
@@ -161,12 +171,25 @@ th{
     width: 100px;
 }
 td{
-    border: 1px solid black;
     background-color: aliceblue;
     color:black;
     text-align: center;
     padding: 6px;
 }
-tr{
-    border: 1px solid black;
+
+p{
+    border-color:black;
+    border-style:solid;
+    border-width: 1px;
+    padding: 10px;
+    margin-left: 50%;
+}
+button:hover{
+    background-color: greenyellow;
+}
+fieldset:hover{
+    background-color: yellow;
+}
+a:visited{
+    color:purple;
 }
