--- a/TitulaTEC/templates/Edificios/consultaEdificios.html
+++ b/TitulaTEC/templates/Edificios/consultaEdificios.html
@@ -8,6 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src="{{url_for('static',filename='JS/global.js')}}"></script>
         
     </head>
     <body>
@@ -17,11 +18,15 @@
             <thead class="table-info">
                 <th>id.Edificio</th>
                 <th>Nombre</th>
+                <th>Editar</th>
+                <th>Eliminar</th>
             </thead>
             {% for e in edificios %}
                 <tr>
                     <td>{{e.idEdificio}}</td>
                     <td>{{e.nombre}}</td>
+                    <td><a href="/edificios/edit/{{e.idEdificio}}"><img src="{{url_for('static',filename='Imagenes/editar.png')}}"></a></td>
+                    <td><a href="javascript:eliminarEdificio({{e.idEdificio}},'{{e.nombre}}')"><img src="{{url_for('static',filename='Imagenes/eliminar.png')}}"></a></td>
                 </tr>
             {% endfor %}
 
