Implementacion de la gestion de usuarios
Creación del modelo de datos del Usuario

--- a/TitulaTEC/templates/Salas/consultaSalas.html
+++ b/TitulaTEC/templates/Salas/consultaSalas.html
@@ -5,7 +5,7 @@
     <title>TitulaTEC</title>
 </head>
 <body>
-    <h1>Lista de Salas</h1>
+    <h1>Listado de Salas</h1>
     <a href="/salas/new"><img src="{{url_for('static',filename='Imagenes/add.gif')}}">Agregar Sala</a>
     <table>
         <thead>
