--- a/TitulaTEC/templates/index.html
+++ b/TitulaTEC/templates/index.html
@@ -6,15 +6,15 @@
     </HEAD>
     <body>
         <p>Acceso al Sistema TitulaTEC</p>
-        <form action="/login">
+        <form action="/login" method="post">
             <label>Email:</label>
-            <input type="email" name="email">
+            <input type="email" name="email" required>
             <br>
             <label>Contraseña:</label>
-            <input type="password" name="pwd">
+            <input type="password" name="password" required>
             <br>
             <button type="submit">Validar</button>
-            <a href="Alumnos/altaAlumno.html">Registrar Cuenta</a>
+            <a href="/registrarUsuario">Registrar Cuenta</a>
         </form>
     </body>
 </HTML>
